--- a/todo/frontend/src/index.css
+++ b/todo/frontend/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-image: url('fox3.jpg');
+  background-size: contain;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -13,6 +15,7 @@ code {
 }
 
 .container {
+  opacity: 0.7;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -39,15 +42,21 @@ code {
   text-align: center;
 }
 
-.menu {
-  flex-grow: 1;
-}
 
 .menu {
+  max-width: 20rem;
+  flex-grow: 1;
 	padding:0;
 	list-style: none;
 }	
+
+.menu ul {
+  padding-inline-start: 0;
+}
+
 .menu li {
+
+  list-style-type: none;
 	position: relative;
 	padding: 10px 30px;
 	background: linear-gradient(to left, #ADCEE9 0%, #FFF, #ADCEE9);
@@ -110,4 +119,13 @@ td {
 }
 tr:hover td {
   background: #ccddff;
+}
+
+.notfound404 {
+  text-align-last: center;
+}
+
+.user {
+  flex-grow: 1;
+  text-align-last: center;
 }
